--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.7'
+	id 'org.springframework.boot' version '3.5.4'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'com.candidate'
 version = '0.0.1-SNAPSHOT'
-description = 'project aims to assess candidates' practical skills, problem-solving abilities, and their capacity to deliver a functional solution within a specified timeframe'
+description = 'project aims to assess candidates'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(22)
 	}
 }
 
